--- a/layouts/partials/widgets/pages.html
+++ b/layouts/partials/widgets/pages.html
@@ -72,7 +72,7 @@
     {{ with $st.Content }}<p>{{ . }}</p>{{ end }}
   </div>
   <div class="col-12">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center" style="margin-left: 5px; margin-right: 5px;">
       {{ range $post := $query }}
       {{ if eq $st.Params.design.view 1 }}
       {{ partial "li_list" . }}
